Fixing overflow bug for mobile

--- a/styles/sass/base/_reset.scss
+++ b/styles/sass/base/_reset.scss
@@ -25,6 +25,10 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  overflow-x: hidden;
+}
+
 img,
 video,
 svg {
